--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 * {margin: 0; padding: 0; box-sizing: border-box;}
 
+body {
+    height: 100vh;
+    width: 100vw;
+    background: url(/images/pattern-background-desktop.svg);
+}
+
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
