--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@
 body {
     height: 100vh;
     width: 100vw;
-    background: url(/images/pattern-background-desktop.svg);
+    background: url('/images/pattern-background-desktop.svg');
+
 }
 
 .attribution { font-size: 11px; text-align: center; }
